--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eventTracker</title>
 </head>
-
+<style>
+    input#total {
+    margin-top: 13px;
+}
+</style>
 <body>
     <div id="wrapper">
         <div id="information">
